# snitch

./: README.md  install.sh  pyproject.toml  snitch
.claude/: CLAUDE.md
.github/workflows/: codeql.yml  gitleaks.yml
.spec/: dev_standards.md
src/snitch/: cli.py  formatter.py  loader.py  normalize.py
src/snitch/extractors/: __init__.py  alert.py
tests/: test_alert_extractor.py
tests/samples/: alert.json  alert1.json  alert10.json  alert2.json  alert3.json  alert5.json  alert6.json  alert7.json  alert8.json  alert9.json  multi.json
